Revert "[SDPA-6056] Fix Spinner overlapping in confirm removal dropdown (#166)" (#170)
This reverts commit d58d9af4e453a063fcf8a47cc3e06ed982cb7004.

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -38,9 +38,3 @@
   text-transform: none;
   letter-spacing: normal;
 }
-
-div.dropbutton-multiple .dropbutton-action .ajax-progress {
-  position: relative !important;
-  top: -4px !important;
-  left: 30px !important;
-}
